included stepper component and made affix sidebar menu work

--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/bulma": "^1.0.3",
     "bulma": "^0.7.1",
+    "css-loader": "^0.28.11",
     "koa": "^2.3.0",
     "nuxt": "^1.4.1",
+    "sass-loader": "^7.0.3",
     "vue-affix": "^0.2.4",
     "vue-scrollto": "^2.11.0",
-    "vue-stepper": "^1.0.11"
+    "vue-stepper": "^1.0.11",
+    "vue-style-loader": "^4.1.0",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
@@ -28,6 +32,7 @@
     "eslint": "^4.15.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-vue": "^4.0.0",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.11.0"
   }
 }
