--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "nuxt-bulma-slim": "^0.3.2",
     "sass-loader": "^7.0.3",
     "vue-affix": "^0.2.4",
+    "vue-blu": "^0.1.9",
     "vue-bulma-expanding": "0.0.1",
+    "vue-mq": "^0.2.1",
     "vue-scrollto": "^2.11.0",
     "vue-stepper": "^1.0.11",
     "vue-style-loader": "^4.1.0",
