--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "vue-affix": "^0.2.4",
     "vue-blu": "^0.1.9",
     "vue-bulma-expanding": "0.0.1",
+    "vue-markdown": "^2.2.4",
     "vue-mq": "^0.2.1",
     "vue-scrollto": "^2.11.0",
+    "vue-slideout": "^1.7.0",
     "vue-stepper": "^1.0.11",
     "vue-style-loader": "^4.1.0",
     "vuelidate": "^0.7.4"
