--- a/package.json
+++ b/package.json
@@ -23,18 +23,15 @@
     "nuxt": "^1.4.1",
     "nuxt-bulma-slim": "^0.3.2",
     "sass-loader": "^7.0.3",
-    "vue-affix": "^0.2.4",
-    "vue-blu": "^0.1.9",
     "vue-bulma-expanding": "0.0.1",
     "vue-markdown": "^2.2.4",
     "vue-mq": "^0.2.1",
-    "vue-scrollto": "^2.11.0",
     "vue-slideout": "^1.7.0",
-    "vue-stepper": "^1.0.11",
     "vue-style-loader": "^4.1.0",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.0",
     "babel-eslint": "^8.2.1",
     "cross-env": "^5.0.1",
     "eslint": "^4.15.0",
