--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-markdown": "^2.2.4",
     "vue-mq": "^0.2.1",
     "vue-slideout": "^1.7.0",
+    "vue-social-sharing": "^2.3.3",
     "vue-style-loader": "^4.1.0",
     "vuelidate": "^0.7.4"
   },
