--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "justlifeinsurance.ca",
   "version": "1.0.0",
-  "description": "My hunky-dory Nuxt.js project",
+  "description": "justlifeinsurance.ca",
   "author": "john",
   "private": true,
   "scripts": {
