--- a/process.yml
+++ b/process.yml
@@ -1,7 +1,7 @@
 apps:
   - script: server/index.js
-    instances: 4
+    instances: 2
     name: justlifeinsurance
     exec_mode: cluster
     env:
-      NODE_ENV: development
+      NODE_ENV: production
