--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "pm2 start process.yml",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "deploy": "bash deploy.sh"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
