--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/bulma": "^1.0.3",
     "@nuxtjs/font-awesome": "^1.0.3",
+    "@nuxtjs/google-analytics": "^2.0.2",
     "bulma": "^0.7.1",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
